--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@
 /frontend/node_modules
 /backend/node_modules
 
+/frontend/config
+/frontend/scripts
+
+#config
+.prettierrc.json
+
 # testing
 /frontend/coverage
 
@@ -20,3 +26,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/.vscode
