--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,7 +53,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.2"
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "node scripts/start.js",
